[metadata]
name = apimd
version = attr: apimd.__version__
description = A Python API compiler for universal Markdown syntax.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Markdown, API
license = MIT
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://github.com/KmolYuan/apimd
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation
    Topic :: Utilities
    Environment :: Console
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[options.package_data]
apimd = py.typed

[options.entry_points]
console_scripts =
    apimd=apimd.__main__:main
